kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pr
  name: proxy-server
spec:
  selector:
    matchLabels:
      run: proxy-server
  replicas: 1
  template:
    metadata:
      labels:
        run: proxy-server
    spec:
      containers:
        - name: proxy-server
          image: bt66/xray:v1.0
          ports:
            - containerPort: 25432
          volumeMounts:
            - name: config-xray
              mountPath: /etc/xray/config.json
              subPath: config.json
              readOnly: true
      volumes:
      - name: config-xray
        configMap:
          name: config-xray
          items:
            - key: config.json
              path: config.json
---
apiVersion: v1
kind: Service
metadata:
  namespace: pr
  name: proxy-server-service
spec:
  type: NodePort
  selector:
    run: proxy-server
  ports:
    - port: 25432

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: proxy-server-ingress
 annotations:
  ingress.kubernetes.io/proxy-read-timeout: "86400"
  ingress.kubernetes.io/proxy-send-timeout: "86400"
  ingress.kubernetes.io/proxy-connect-timeout: "86400"
  nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
  nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
  nginx.ingress.kubernetes.io/proxy-connect-timeout: "86400"
  nginx.ingress.kubernetes.io/server-snippets: |
    location / {
      proxy_http_version 1.1;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
      proxy_set_header Host $http_host;
      client_max_body_size 1000000M;
      client_header_buffer_size 8m;
      large_client_header_buffers 8 8m;
      fastcgi_buffer_size 8m;
      fastcgi_buffers 8 8m;
      fastcgi_read_timeout 600;
      set_real_ip_from 204.93.240.0/24;
      set_real_ip_from 204.93.177.0/24;
      set_real_ip_from 199.27.128.0/21;
      set_real_ip_from 173.245.48.0/20;
      set_real_ip_from 103.21.244.0/22;
      set_real_ip_from 103.22.200.0/22;
      set_real_ip_from 103.31.4.0/22;
      set_real_ip_from 141.101.64.0/18;
      set_real_ip_from 108.162.192.0/18;
      set_real_ip_from 190.93.240.0/20;
      set_real_ip_from 188.114.96.0/20;
      set_real_ip_from 197.234.240.0/22;
      set_real_ip_from 198.41.128.0/17;
      real_ip_header CF-Connecting-IP;
    }
spec:
  ingressClassName: nginx
  rules:
  - host: prx.bt66.my.id
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: proxy-server-service
              port:
                number: 25432
